update noteshare routes
