# Public/swagger.json
@@ -106,6 +106,80 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"CustomResponse_string-or-null_": {
+				"properties": {
+					"data": {
+						"type": "string",
+						"nullable": true
+					},
+					"error": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/CustomError"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Permission": {
+				"enum": [
+					"read-only",
+					"read-write",
+					"owner"
+				],
+				"type": "string"
+			},
+			"ShareNoteReq": {
+				"properties": {
+					"noteId": {
+						"type": "number",
+						"format": "double"
+					},
+					"toUserId": {
+						"type": "number",
+						"format": "double"
+					},
+					"permission": {
+						"$ref": "#/components/schemas/Permission"
+					}
+				},
+				"required": [
+					"noteId",
+					"toUserId",
+					"permission"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UpdatePermissionReq": {
+				"properties": {
+					"noteId": {
+						"type": "number",
+						"format": "double"
+					},
+					"toUserId": {
+						"type": "number",
+						"format": "double"
+					},
+					"permission": {
+						"$ref": "#/components/schemas/Permission"
+					}
+				},
+				"required": [
+					"noteId",
+					"toUserId",
+					"permission"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"NotesRes": {
 				"properties": {
 					"id": {
@@ -175,16 +249,94 @@
 					},
 					"content": {
 						"type": "string"
-					},
-					"userId": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
 					"title",
-					"content",
-					"userId"
+					"content"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CustomResponse_NotesRes-Array-or-null_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/NotesRes"
+						},
+						"type": "array",
+						"nullable": true
+					},
+					"error": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/CustomError"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ObjectLiteral": {
+				"description": "Interface of the simple literal object with any string keys.",
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {}
+			},
+			"UpdateResult": {
+				"description": "Result object returned by UpdateQueryBuilder execution.",
+				"properties": {
+					"raw": {
+						"description": "Raw SQL result returned by executed query."
+					},
+					"affected": {
+						"type": "number",
+						"format": "double",
+						"description": "Number of affected rows/documents\nNot all drivers support this"
+					},
+					"generatedMaps": {
+						"items": {
+							"$ref": "#/components/schemas/ObjectLiteral"
+						},
+						"type": "array",
+						"description": "Generated values returned by a database.\nHas entity-like structure (not just column database name and values)."
+					}
+				},
+				"required": [
+					"raw",
+					"generatedMaps"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CustomResponse_UpdateResult-or-null_": {
+				"properties": {
+					"data": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/UpdateResult"
+							}
+						],
+						"nullable": true
+					},
+					"error": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/CustomError"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"data",
+					"error"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -251,28 +403,6 @@
 				"required": [
 					"email",
 					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"CustomResponse_string-or-null_": {
-				"properties": {
-					"data": {
-						"type": "string",
-						"nullable": true
-					},
-					"error": {
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/CustomError"
-							}
-						],
-						"nullable": true
-					}
-				},
-				"required": [
-					"data",
-					"error"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -361,7 +491,133 @@
 				]
 			}
 		},
-		"/notes/create": {
+		"/notes/share/{userId}": {
+			"post": {
+				"operationId": "ShareNote",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_string-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ShareNotes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ShareNoteReq"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/notes/update-premission/{userId}": {
+			"put": {
+				"operationId": "UpdatePermission",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_string-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ShareNotes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdatePermissionReq"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/notes/remove-permission/{userId}": {
+			"delete": {
+				"operationId": "RemovePermission",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_string-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ShareNotes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdatePermissionReq"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/notes/create/{userId}": {
 			"post": {
 				"operationId": "CreateNote",
 				"responses": {
@@ -380,7 +636,17 @@
 					"Notes"
 				],
 				"security": [],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -421,7 +687,100 @@
 							"format": "double",
 							"type": "number"
 						}
-					},
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateNote",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_UpdateResult-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Notes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "noteId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/NoteCreationReq"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteNoteById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_string-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Notes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "noteId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/notes/{userId}/all": {
+			"get": {
+				"operationId": "GetAllNotes",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CustomResponse_NotesRes-Array-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Notes"
+				],
+				"security": [],
+				"parameters": [
 					{
 						"in": "path",
 						"name": "userId",
